k8s/deploy-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
        

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
     app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
